[tool.poetry]
name = "checklink"
version = "0.1.0"
description = "Check remote or local resource reachability in markdown."
authors = ["zombie110year <zombie110year@outlook.com>"]
packages = [
    {include="checklink"}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name="tsinghua"
url="https://pypi.tuna.tsinghua.edu.cn/simple"
