[tool.poetry]
name = "checklink"
version = "0.1.0"
description = "Check remote or local resource reachability in markdown."
authors = ["zombie110year <zombie110year@outlook.com>"]
packages = [
    {include="checklink"}
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zombie110year/checklink"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pyinstaller = "^3.5"
# pyinstaller dependencies in win32
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.poetry.scripts]
checklink = 'checklink.cli:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
